# Gosh-Slack-CLI-Manager

./: Cargo.toml  README.md
src/: app.rs  main.rs
src/components/: backup.rs  config_editor.rs  cron.rs  disks.rs  kernel.rs  logs.rs  mirror.rs  mod.rs  network.rs  package_browser.rs  package_search.rs  sbotools.rs  services.rs  settings.rs  sysinfo.rs  updater.rs  user_setup.rs
src/slackware/: commands.rs  config.rs  mod.rs  packages.rs  version.rs
src/ui/: layout.rs  mod.rs  theme.rs  widgets.rs
src/utils/: error.rs  mod.rs  root.rs
